--- a/LifeHack/package.json
+++ b/LifeHack/package.json
@@ -8,13 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@esbuild/win32-x64": "^0.17.19",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "firebase": "^9.22.1",
     "axios": "^1.4.0",
+    "firebase": "^9.22.1",
     "vue": "^3.3.2"
   },
   "devDependencies": {
